# logjam

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  README.md
.github/workflows/: rust-tests.yml
backend/: TESTING.md
backend/src/: main.rs
backend/src/application/: mod.rs
backend/src/application/dto/: search.rs
backend/src/application/repositories/: mod.rs  page_repository.rs
backend/src/application/services/: embedding_service.rs  import_service.rs  mod.rs  sync_service.rs
backend/src/application/use_cases/: indexing.rs  link_queries.rs  mod.rs  search.rs  url_queries.rs
backend/src/domain/: README.md  aggregates.rs  base.rs  entities.rs  events.rs  mod.rs  value_objects.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/embeddings/: fastembed_service.rs  mod.rs  qdrant_store.rs  text_preprocessor.rs
backend/src/infrastructure/file_system/: discovery.rs  mod.rs  watcher.rs
backend/src/infrastructure/parsers/: logseq_markdown.rs  mod.rs
backend/src/infrastructure/persistence/: mod.rs  schema.rs  sqlite_page_repository.rs
backend/tests/: application_integration_test.rs  integration_test.rs  semantic_search_integration_test.rs
frontend/: package.json
frontend/src/: index.ts
notes/: OVERVIEW.md  RunningTests.md  SystemDefinition.md  desktop_stack.md  qdrant.md  sqlite_tauri.md  webpage-rs.md  working_notes.md
notes/dependencies/: notify-rs.md  tantivy.md
notes/features/: FileEventSystem.md  FilterSearchResultsByPages.md  ImportLogseqDirectory.md  SemanticSearch.md  SyncLogseqDirectory.md  file-page-mapping.md  sqlite-persistence.md  tantivy-search.md  tauri-integration.md
notes/issues/: semantic-search-implementation.md
notes/workflows/: workflow-1-initial-import.md  workflow-2-continuous-sync.md  workflow-3-fulltext-search.md  workflow-4-semantic-search.md
