[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "backend/src/lib.rs"

[[bin]]
name = "backend"
path = "backend/src/main.rs"

[[test]]
name = "integration_test"
path = "backend/tests/integration_test.rs"

[[test]]
name = "application_integration_test"
path = "backend/tests/application_integration_test.rs"

[[test]]
name = "semantic_search_integration_test"
path = "backend/tests/semantic_search_integration_test.rs"

[dependencies]
# File system watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Async runtime with required features
tokio = { version = "1.41", features = ["fs", "rt-multi-thread", "macros", "sync", "time"] }

# Serialization (needed for Tauri IPC)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Semantic search - embeddings
fastembed = "5.2"

# Semantic search - vector database
qdrant-client = "1.11"

# Text processing
regex = "1.10"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# SQLite persistence
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

[dev-dependencies]
tempfile = "3.14"
